# Deterministic-Task-Engine

./: CMakeLists.txt  README.md
doc/: Doxyfile  achitecture.puml  state_machine.puml
doc/DoxygenOutput/html/: _execution_policy_test_8cpp.html  _r_e_a_d_m_e_8md.html  _task_manager_test_8cpp.html  _task_test_8cpp.js  _test_example_8cpp.html  _test_example_8cpp.js  annotated_dup.js  classthecpuffin_1_1_execution_policy-members.html  classthecpuffin_1_1_execution_policy.html  classthecpuffin_1_1_execution_policy.js  classthecpuffin_1_1_task.js  classthecpuffin_1_1_task_manager.html  classthecpuffin_1_1_task_manager.js  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  (+21 more)
docs/: Doxyfile  _task_manager_test_8cpp.js  _task_test_8cpp.html  annotated.html  classthecpuffin_1_1_task.html  classthecpuffin_1_1_task_manager-members.html  design.puml  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  execution__policy_8hpp_source.html  globals_func.html  index.html  namespaces.html  navtreeindex0.js  pages.html  src_2main_8cpp.html  task_8hpp_source.html  task__manager_8hpp.html  task__manager_8hpp.js  test.html
docs/search/: all_7.js  all_a.js  all_f.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  functions_0.js  functions_1.js  functions_2.js
src/: CMakeLists.txt  execution_policy.cpp  execution_policy.hpp  main.cpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp
tests/: CMakeLists.txt  ExecutionPolicyTest.cpp  TaskManagerTest.cpp  TaskTest.cpp  TestExample.cpp  main.cpp
(+47 files in other folders)
